Add logging for TdsUserAdapter and minor changes